fix(SideNav): prevent text wrapping in side navigation background

--- a/packages/react/src/components/UIShell/components/styles/_side-nav.scss
+++ b/packages/react/src/components/UIShell/components/styles/_side-nav.scss
@@ -544,6 +544,7 @@ div:has(.#{$prefix}--header)
   background: $background;
   inline-size: 100%;
   inset-block-end: 0;
+  white-space: nowrap;
 }
 
 //----------------------------------------------------------------------------
